Major bugs fixed
